[gd_scene load_steps=23 format=2]

[ext_resource path="res://Bat.gd" type="Script" id=1]
[ext_resource path="res://Player_detect.gd" type="Script" id=2]
[ext_resource path="res://MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://Bat.png" type="Texture" id=4]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://SoftEnemyCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://StatsForWorldCharacters.tscn" type="PackedScene" id=7]
[ext_resource path="res://SwordHitBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://BatHpLabel.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.89765
height = 0.0

[sub_resource type="CircleShape2D" id=8]
radius = 51.2468

[sub_resource type="CapsuleShape2D" id=9]
radius = 8.00804
height = 1.3042

[sub_resource type="CircleShape2D" id=10]
radius = 0.549255

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 9 )

[sub_resource type="CircleShape2D" id=12]
radius = 4.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2147483665
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 1
playing = true
offset = Vector2( 0, -12 )
__meta__ = {
"_edit_lock_": true
}

[node name="MediumShadow" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 0.8 )
shape = SubResource( 7 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Player_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detect"]
visible = false
light_mask = 32
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0.264877, -13.773 )
shape = SubResource( 9 )

[node name="StatsForWorldCharacters" parent="." instance=ExtResource( 7 )]
max_health = 4

[node name="SwordHitBox" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="SwordHitBox" index="0"]
position = Vector2( 0.458391, -1.48248 )
scale = Vector2( 8, 1 )
shape = SubResource( 10 )
one_way_collision_margin = 0.5

[node name="BatHpLabel" type="Label" parent="."]
margin_left = -8.11488
margin_top = -27.3648
margin_right = 12.8851
margin_bottom = -13.3648
rect_scale = Vector2( 0.78232, 0.322454 )
custom_fonts/font = SubResource( 11 )
text = "4/4"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoftEnemyCollision" parent="." instance=ExtResource( 6 )]
gravity = 0.0

[node name="CollisionShape2D" parent="SoftEnemyCollision" index="0"]
shape = SubResource( 12 )
[connection signal="body_entered" from="Player_detect" to="Player_detect" method="_on_Player_detect_body_entered"]
[connection signal="body_exited" from="Player_detect" to="Player_detect" method="_on_Player_detect_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]

[editable path="SwordHitBox"]

[editable path="SoftEnemyCollision"]
